--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "main": "app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./db/populatedb.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.21.1"
-  }
+    "express": "^4.21.1",
+    "pg": "^8.13.0"
+  },
+  "description": ""
 }
